--- a/Football.API/Football.API.csproj
+++ b/Football.API/Football.API.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\Domain\Football.Domain\Football.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
