--- a/src/Application/Football.Application/Football.Application.csproj
+++ b/src/Application/Football.Application/Football.Application.csproj
@@ -5,9 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="CQRS\Commands\" />
-    <Folder Include="CQRS\Handlers\" />
-    <Folder Include="CQRS\Queries\" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
